packages/typ/tests/fixtures/diagnostics/0832_polyvar_call_wrong_tag_08.ml
let read_theta : [ `A | `B ] -> int = function
  | `A -> 7
  | `B -> 8

let _ = read_theta `C
